deep_atac_pg.pth

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 model/atac_PG_hv_weightedsampler.pth filter=lfs diff=lfs merge=lfs -text
+atac_PG_hv_weightedsampler.pth filter=lfs diff=lfs merge=lfs -text
