--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 atac_PG_hv_weightedsampler.pth filter=lfs diff=lfs merge=lfs -text
  filter=lfs diff=lfs merge=lfs -text
+deepscan_pg.py filter=lfs diff=lfs merge=lfs -text
